fix: text-align left and bold text fixes

--- a/tools/reviewer/web/src/styles/codeReview.scss
+++ b/tools/reviewer/web/src/styles/codeReview.scss
@@ -32,11 +32,6 @@
         }
         background-color: #f7f7f7;
       }
-      &.commentActive:hover {
-        .add_sign {
-          // opacity: 0;
-        }
-      }
 
       .comment-wrapper {
         margin: 10px 20px 25px 20px;
