--- a/tools/reviewer/web/src/styles/global.scss
+++ b/tools/reviewer/web/src/styles/global.scss
@@ -3,4 +3,8 @@ body {
   color: #2a2a2a;
   height: 100%;
   margin: 0px;
+  font-family: 'Heebo', sans-serif;
+}
+.bold-text {
+  font-weight: bold;
 }
