--- a/tools/reviewer/web/src/styles/singleReview.scss
+++ b/tools/reviewer/web/src/styles/singleReview.scss
@@ -5,14 +5,40 @@
 
   .review-title {
     font-size: 24px;
+    font-weight: 500;
     background-color: #cdecff;
     padding: 5px $pagePadding;
+    div {
+      font-weight: 400;
+    }
+    .diffNumber {
+      font-weight: 500;
+    }
     .review-status {
       margin-left: 30px;
+
+      span {
+        display: flex;
+        align-items: center;
+        font-size: 22px;
+        font-weight: 500;
+      }
+      .mat-icon {
+        height: 24px;
+        width: 24px;
+        font-size: 24px;
+        margin-right: 10px;
+      }
+      .underReview {
+        .mat-icon {
+          color: #baa12d;
+        }
+      }
     }
   }
   .reviewer-name,
   .author-name {
+    font-weight: 500;
     .add-to-list {
       display: none;
       position: absolute;
@@ -61,7 +87,7 @@
         }
       }
       .timestamp {
-        font-weight: bold;
+        font-weight: 500;
       }
       .link {
         cursor: pointer;
@@ -76,20 +102,18 @@
     .comment-file {
       padding: 10px $pagePadding;
       border-bottom: 1px solid $borderColor;
+      font-weight: 500;
     }
   }
   .review-sub-title {
-    font-weight: bold;
     padding: 10px $pagePadding;
   }
   .files-info-container {
     background-color: white;
+    font-weight: 500;
     .file-info {
       padding: 10px $pagePadding;
       border-bottom: 1px solid $borderColor;
     }
-  }
-  .bold-text {
-    font-weight: bold;
   }
 }
